<resources>
    <!-- General -->
    <string name="app_name" translatable="false">Together</string>
    <string name="next">Proximo</string>
    <string name="select">Selecione</string>
    <string name="save">Salvar</string>
    <!-- Create EventActivity Base -->
    <string name="create_event">Diga-nos um pouco sobre seu evento</string>
    <string name="event_name">Nome</string>
    <string name="event_about">Sobre</string>
    <!-- Create EventActivity Detail -->
    <string name="event_details">Conte-nos mais alguns detalhes</string>
    <string name="event_price">Preço</string>
    <string name="event_minage">Idade Mínima</string>
    <string name="event_maxage">Idade Máxima</string>
    <string name="event_minpart">Participações Mínimas</string>
    <string name="event_maxpart">Participações Máximas</string>
    <!-- Create EventActivity Category -->
    <string name="event_select_category">Seleciones as Categorias</string>
    <string name="event_primary_category">Categoria Primária</string>
    <string name="event_categories">Categorias</string>
    <!-- Create EventActivity Location -->
    <string name="event_where_is">Onde será o evento?</string>
    <!-- Create EventActivity Image -->
    <string name="event_select_primary_image">Selecione a imagem principal</string>

    <!-- Menu -->
    <string name="new_event">Novo Evento</string>
    <string name="clear">Limpar</string>
    <string name="reset">Resetar</string>
    <string name="search">Procurar</string>

    <!-- Error Messages -->
    <string name="fill_all_blanks">Favor preencher todos os campos obrigatórios</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event_register">EventRegister</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_event_register_base">EventRegisterBase</string>
    <string name="title_activity_maps">Map</string>
    <string name="searchHere">Digite Aqui</string>
    <string name="showAll">Mostrar Todos</string>


</resources>
