<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/event_details"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEventMinAge_Create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_minage"
        android:inputType="number"
        android:layout_marginStart="4dp"
        android:layout_marginTop="122dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/greyColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
H
    <EditText
        android:id="@+id/txtEventMaxAge_Create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_maxage"
        android:layout_marginTop="250dp"
        android:inputType="number"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/greyColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEventMinParticipation_Create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_minpart"
        android:layout_marginTop="314dp"
        android:inputType="number"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/greyColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEventMaxParticipation_Create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_maxage"
        android:layout_marginTop="378dp"
        android:inputType="number"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/greyColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEventPrice_Create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_price"
        android:layout_marginTop="186dp"
        android:inputType="number"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/greyColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEventRegisterNextDetails"
        android:onClick="onEventRegisterNextDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="436dp"
        android:background="@color/colorAccent"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>