<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_event_base_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_where_is"
            android:textColor="@color/greyOne"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/txtEventWhereIs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_where_is"
            android:textColor="@color/greyOne"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/divider"></LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_categories"
            android:textColor="@color/greyOne"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/txtEventPrimaryCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_primary_category"
            android:textColor="@color/greyOne"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/divider"></LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_about"
            android:textColor="@color/greyOne"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/txtEventAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_about"
            android:textColor="@color/greyOne"/>

    </LinearLayout>


</RelativeLayout>